crates/api/tests/snapshots/snapshots__queue_clear.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": null,
  "status": 204
}
