crates/api/tests/snapshots/snapshots__search.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "items": [
      {
        "added_at": "2023-11-14T22:13:24Z",
        "air_date": "2023-11-14T22:13:23Z",
        "artwork": {},
        "id": "e1",
        "manually_edited": false,
        "number": 1,
        "overview": null,
        "runtime_minutes": 42,
        "season_id": "se1",
        "season_number": 1,
        "season_title": "Season 1",
        "series_artwork": {
          "backdrops": [
            {
              "base": "/images/s1-backdrop",
              "widths": [
                480,
                960
              ]
            }
          ],
          "posters": [
            {
              "base": "/images/s1-poster",
              "widths": [
                180,
                480,
                960
              ]
            }
          ]
        },
        "series_id": "s1",
        "series_title": "Alpha s1",
        "title": "Alpha e1",
        "type": "episode",
        "updated_at": "2023-11-14T22:13:24Z"
      },
      {
        "added_at": "2023-11-14T22:13:21Z",
        "artwork": {},
        "content_rating": {
          "code": "PG-13",
          "system": "MPAA"
        },
        "id": "m1",
        "manually_edited": false,
        "overview": "overview",
        "runtime_minutes": 100,
        "title": "Alpha m1",
        "type": "movie",
        "updated_at": "2023-11-14T22:13:21Z",
        "year": 2020
      },
      {
        "artwork": {},
        "id": "p1",
        "name": "Alpha Person",
        "type": "person"
      },
      {
        "added_at": "2023-11-14T22:13:22Z",
        "artwork": {},
        "content_rating": {
          "code": "TV-14",
          "system": "TV"
        },
        "id": "s1",
        "manually_edited": false,
        "overview": null,
        "season_count": 1,
        "title": "Alpha s1",
        "type": "series",
        "updated_at": "2023-11-14T22:13:22Z",
        "year": 2019
      }
    ],
    "limit": 50,
    "offset": 0,
    "total": 4
  },
  "status": 200
}
