crates/api/tests/snapshots/snapshots__search_bad_type.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "bad_request",
      "message": "unknown search type: bogus"
    }
  },
  "status": 400
}
