crates/api/tests/snapshots/snapshots__search_by_type.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "items": [
      {
        "id": "p1",
        "name": "Alpha Person",
        "type": "person"
      }
    ],
    "limit": 50,
    "offset": 0,
    "total": 1
  },
  "status": 200
}
