crates/api/tests/snapshots/snapshots__series_relink_existing_target.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "error": {
      "code": "bad_request",
      "message": "a series can only be relinked to a provider id"
    }
  },
  "status": 400
}
