crates/api/tests/snapshots/snapshots__series_season_detail.snap
---
source: crates/api/tests/snapshots.rs
expression: value
---
{
  "body": {
    "id": "se1",
    "number": 1,
    "overview": null,
    "series_id": "s1",
    "title": "Season 1"
  },
  "status": 200
}
